--- a/www/src/components/creative-layout.module.scss
+++ b/www/src/components/creative-layout.module.scss
@@ -169,6 +169,26 @@ footer {
   margin-bottom: 25px;
 }
 
+.menu .input-box {
+  border: var(--border);
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
+.menu .search-results {
+  position: absolute;
+  background-color: black;
+  z-index: 10;
+  margin-left: -0.25em;
+  margin-top: 0.25em;
+  padding-right: 2.5em;
+}
+
+.menu .search-list-group-item {
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
 .menu ul {
   margin-top: 12px;
   margin-bottom: 12px;
