--- a/client/swagger-templates/csharp/model.mustache
+++ b/client/swagger-templates/csharp/model.mustache
@@ -26,6 +26,7 @@ using System.ComponentModel;
 {{/generatePropertyChanged}}
 using System.ComponentModel.DataAnnotations;
 {{/netStandard}}
+using SerializeField = UnityEngine.SerializeField;
 using SwaggerDateConverter = {{packageName}}.Client.SwaggerDateConverter;
 
 {{#models}}
