--- a/client/swagger-templates/csharp/modelGeneric.mustache
+++ b/client/swagger-templates/csharp/modelGeneric.mustache
@@ -2,6 +2,7 @@
     /// {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
     /// </summary>
     [DataContract]
+    [Serializable]
     {{#discriminator}}
     [JsonConverter(typeof(JsonSubtypes), "{{discriminator}}")]{{#children}}
     [JsonSubtypes.KnownSubType(typeof({{classname}}), "{{^vendorExtensions.x-discriminator-value}}{{name}}{{/vendorExtensions.x-discriminator-value}}{{#vendorExtensions.x-discriminator-value}}{{{vendorExtensions.x-discriminator-value}}}{{/vendorExtensions.x-discriminator-value}}")]{{/children}}
@@ -25,6 +26,7 @@
         {{/complexType}}
         {{/isEnum}}
         {{#isEnum}}
+        [SerializeField] private {{#complexType}}{{{complexType}}}{{/complexType}}{{^complexType}}{{{datatypeWithEnum}}}{{/complexType}}{{^isContainer}}{{^required}}?{{/required}}{{/isContainer}} m_{{name}};
         /// <summary>
         /// {{^description}}Gets or Sets {{{name}}}{{/description}}{{#description}}{{description}}{{/description}}
         /// </summary>
@@ -32,7 +34,7 @@
         /// <value>{{description}}</value>
         {{/description}}
         [DataMember(Name="{{baseName}}", EmitDefaultValue={{emitDefaultValue}})]
-        public {{#complexType}}{{{complexType}}}{{/complexType}}{{^complexType}}{{{datatypeWithEnum}}}{{/complexType}}{{^isContainer}}{{^required}}?{{/required}}{{/isContainer}} {{name}} { get; set; }
+        public {{#complexType}}{{{complexType}}}{{/complexType}}{{^complexType}}{{{datatypeWithEnum}}}{{/complexType}}{{^isContainer}}{{^required}}?{{/required}}{{/isContainer}} {{name}} { get { return m_{{name}}; } set { m_{{name}} = value; } }
         {{/isEnum}}
         {{/vars}}
     {{#hasRequired}}
@@ -106,7 +108,8 @@ this.{{name}} = {{name}};
         /// <value>{{description}}</value>{{/description}}
         [DataMember(Name="{{baseName}}", EmitDefaultValue={{emitDefaultValue}})]{{#isDate}}
         [JsonConverter(typeof(SwaggerDateConverter))]{{/isDate}}
-        public {{{datatype}}} {{name}} { get; {{#isReadOnly}}private {{/isReadOnly}}set; }
+        [SerializeField] private {{{datatype}}} m_{{name}};
+        public {{{datatype}}} {{name}} { get { return m_{{name}}; } {{#isReadOnly}}private {{/isReadOnly}}set { m_{{name}} = value; } }
         {{/isEnum}}
         {{/isInherited}}
 
