Prototype JSON to Block conversion

--- a/www/src/components/creative-layout.module.scss
+++ b/www/src/components/creative-layout.module.scss
@@ -599,4 +599,8 @@ pre {
   color: var(--code-color-14);
 }
 
-/* Literal.Number.Integer.Long */
+textarea.blocklyCommentTextarea {
+  background-color: lightgray;
+  color: black;
+  font-size: 12pt;
+}
