card display in progress

--- a/www/src/components/creative-layout.module.scss
+++ b/www/src/components/creative-layout.module.scss
@@ -19,6 +19,7 @@ $main-width: 700px !default;
   --border: solid 1px #DBDBDB;
   --selection-background: #DBDBDB;
   --selection-text: #21215c;
+  //--background-color: white;
   --background-color: #21215c;
   --text-color: var(--base-color);
   --placeholder-color: var(--base-color);
