--- a/www/src/styles/font.scss
+++ b/www/src/styles/font.scss
@@ -5,3 +5,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'trenco';
+  src: url('../assets/trenco.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
