--- a/www/src/components/creative-layout.module.scss
+++ b/www/src/components/creative-layout.module.scss
@@ -206,6 +206,13 @@ header p {
   -ms-overflow-style: none;
 }
 
+.collection-div {
+  width: 60vw;
+  margin-left: calc(-26vw + 50%);
+  display: flex;
+  flex-wrap: wrap;
+}
+
 ::-webkit-scrollbar {
   width: 0;
 }
