more changes to collection template

--- a/www/src/components/creative-layout.module.scss
+++ b/www/src/components/creative-layout.module.scss
@@ -259,7 +259,7 @@ header p {
   position: relative;
 }
 
-.menu .input-box {
+.input-box {
   border: var(--border);
   padding-left: 0.25em;
   padding-right: 0.25em;
