--- a/www/src/components/card-editor-view.module.css
+++ b/www/src/components/card-editor-view.module.css
@@ -3,3 +3,12 @@
     width: 900px;
     color: black;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
