--- a/spellsource-web/src/components/creative-layout.module.scss
+++ b/spellsource-web/src/components/creative-layout.module.scss
@@ -70,6 +70,18 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--text-dark);
 }
 
+@media screen and (max-width: 400px){
+  h1 {
+    font-size: 12vw !important;
+  }
+  h2 {
+    font-size: 6vw !important;
+  }
+  h3 {
+    font-size: 6vw !important;
+  }
+}
+
 h1 {
   font-size: 64px;
 }
@@ -231,6 +243,15 @@ section {
   .navbarContainer{
     // padding: 0 20px !important;
   }
+  .heroButtonsContainer{
+    align-self: 'center' !important;
+  }
+ }
+ 
+ @media screen and (max-width: 1200px){
+  .heroContainerAlt{
+    flex-wrap: wrap !important;
+  }
  }
 
  .mobileNavbar{
@@ -272,9 +293,7 @@ section {
   justify-content: space-around;
   align-items: center;
   background-color: var(--header-background-color);
-  border-top: var(--border);
-  border-bottom: var(--border);
-  // padding: 0 90px;
+  border: 2px solid var(--text-dark);
 
   .search-results {
     background-color: var(--background-color);
@@ -292,6 +311,7 @@ section {
 
   a:link {
     text-decoration: none;
+    font-weight: 200;
   }
 
   .search-list-group-item {
@@ -335,18 +355,22 @@ section {
 
 .backgroundGradient0{
   background-image: url('../assets/gradient-section-1.png');
+  background-size: auto 100%;
 }
 
 .backgroundGradient1{
   background-image: url('../assets/gradient-section-2.png');
+  background-size: auto 100%;
 }
 
 .backgroundGradient2{
   background-image: url('../assets/gradient-section-3.png');
+  background-size: auto 100%;
 }
 
 .backgroundGradient3{
   background-image: url('../assets/gradient-section-4.png');
+  background-size: auto 100%;
 }
 
 /**
@@ -356,14 +380,17 @@ section {
  .heroContainer{
   display: flex;
   flex-direction: column;
-  padding: 145px 90px;
+  flex-wrap: wrap;
+  padding: 145px 5%;
 }
 
 .heroContainerAlt{
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 145px 90px;
+  justify-content: space-between;
+  gap: 34px;
+  padding: 145px 5%;
 }
 
 .heroContainerGithub{
@@ -385,6 +412,7 @@ section {
     justify-content: center;
     height: calc(100vh - 76px);
     background-image: url('../assets/gradient-section-1.png');
+    background-size: auto 100%;
     padding: 0;
  }
 
@@ -400,7 +428,6 @@ section {
  .heroIntroLogos{
   display: flex;
   align-items: center;
-  padding-top: 41px;
   flex-wrap: wrap;
  }
 
@@ -412,7 +439,9 @@ section {
 
  .heroButtonsContainer{
   display: flex;
+  flex-wrap: wrap;
   padding: 46px 0;
+  gap: 12px;
  }
 
  .heroIntroSubText{
@@ -424,7 +453,14 @@ section {
 .heroTextContainer{
   display: flex;
   flex-direction: column;
-  max-width: 996px;
+  flex-shrink: 3;
+  width: 75%;
+}
+
+.heroPlayContainer{
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 3;
 }
  
  .heroTitle{
@@ -440,6 +476,7 @@ section {
 
  .heroSectionTitle{
   color: var(--text-light);
+  min-width: 320px;
  }
 
  .playSectionTitle{
@@ -449,10 +486,13 @@ section {
 
  .githubSectionTitle {
   color: var(--text-dark);
+  min-width: 320px;
  }
 
  .githubSectionSubText{
   color: var(--text-dark);
+  max-width: 580px;
+  align-self: center;
  }
 
 .playSectionBody{
@@ -462,12 +502,13 @@ section {
 } 
 
  .heroImageContainer{
-  padding: 20px;
+  display: flex;
+  flex-grow: 1;
+  gap: 12px;
 }
  .heroImage{
-  width: 640px;
-  margin-left: 20px;
-  height: auto;
+  max-width:100%;
+  width: 800px;
   border: '2px solid #fff';
   border-radius: 12px;
  }
@@ -479,11 +520,14 @@ section {
 .footer{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
   background-image: url('../assets/gradient-footer.png');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
   font-size: $font-size-footer;
-  padding: 0 90px;
+  padding: 0 5%;
   text-decoration: none !important;
 
   strong{ 
@@ -492,6 +536,7 @@ section {
 
   ul {
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-end;
     color:var(--text-dark); 
     text-decoration: none;
