--- a/spellsource-web/src/components/creative-layout.module.scss
+++ b/spellsource-web/src/components/creative-layout.module.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:300,400,500,700&display=swap');
 @import "../styles/font";
 
 /**
@@ -88,15 +88,18 @@ h1 {
 
 h2 {
   font-size: 40px;
+  font-weight: 500;
 }
 
 h3 {
   font-size: 24px;
-  padding-bottom: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: 400;
 }
 
 h5 {
@@ -311,6 +314,7 @@ section {
 
   strong {
     padding-left: 10px;
+    font-weight: 400;
   }
 
   a:link {
@@ -359,22 +363,22 @@ section {
 
 .backgroundGradient0{
   background-image: url('../assets/gradient-section-1.png');
-  background-size: auto 100%;
+  background-size: 100% auto;
 }
 
 .backgroundGradient1{
   background-image: url('../assets/gradient-section-2.png');
-  background-size: auto 100%;
+  background-size: 100% auto;
 }
 
 .backgroundGradient2{
   background-image: url('../assets/gradient-section-3.png');
-  background-size: auto 100%;
+  background-size: 100% auto;
 }
 
 .backgroundGradient3{
   background-image: url('../assets/gradient-section-4.png');
-  background-size: auto 100%;
+  background-size: 100% auto;
 }
 
 /**
@@ -414,6 +418,7 @@ section {
 
 .heroContainerAlt{
   display: flex;
+  position: relative;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -438,7 +443,7 @@ section {
     overflow-y:visible;
     height: calc(100vh - 76px);
     background-image: url('../assets/gradient-section-1.png');
-    background-size: auto 100%;
+    background-size: 100% auto;
     padding: 0;
  }
 
@@ -493,6 +498,7 @@ section {
   display: flex;
   flex-direction: column;
   flex-shrink: 3;
+  z-index: 13;
 }
  
  .heroTitle{
