--- a/spellsource-web/src/components/creative-layout.module.scss
+++ b/spellsource-web/src/components/creative-layout.module.scss
@@ -360,22 +360,22 @@ section {
 
 .backgroundGradient0{
   background-image: url('../assets/gradient-section-1.png');
-  background-size: auto 100%;
+  background-size: 100% 100%;
 }
 
 .backgroundGradient1{
   background-image: url('../assets/gradient-section-3.png');
-  background-size: auto 100%;
+  background-size: 100% 100%;
 }
 
 .backgroundGradient2{
   background-image: url('../assets/gradient-section-1.png');
-  background-size: auto 100%;
+  background-size: 100% 100%;
 }
 
 .backgroundGradient3{
   background-image: url('../assets/gradient-section-2.png');
-  background-size: auto 100%;
+  background-size: 100% 100%;
 }
 
 /**
@@ -440,7 +440,7 @@ section {
     overflow-y:visible;
     height: calc(100vh - 76px);
     background-image: url('../assets/gradient-section-4.png');
-    background-size: auto 100%;
+    background-size: 100% 100%;
     padding: 0;
  }
 
